welcome.lessons.welcome.bat.bool1.IcyHot.scala.error
icyHot:10: error: Unmatched closing brace '}' ignored here
	}else if(temp1<=0 && temp2=100 ||temp1=100 && temp2<=0){
        ^icyHot:10: error: ';' expected but 'else' found.
	}else if(temp1<=0 && temp2=100 ||temp1=100 && temp2<=0){
         ^icyHot:16: error: Unmatched closing brace '}' ignored here
 }
 ^